modules/security-group/main.tf
resource "aws_security_group" "alb_sg" {
  name = var.alb_sg_name
  description = var.alb_sg_description
  vpc_id = var.vpc_id

  ingress {
    from_port         = 80
    to_port           = 80
    protocol          = "tcp"
    cidr_blocks       = var.anywhere
}

  egress {
    from_port         = 0
    to_port           = 0
    protocol          = "-1"
    cidr_blocks       = var.anywhere
}
}
resource "aws_security_group" "bastion_sg" {
  name = var.bastion_sg_name
  description = var.bastion_sg_description
  vpc_id = var.vpc_id

  ingress {
    from_port         = 22
    to_port           = 22
    protocol          = "tcp"
    cidr_blocks       = var.anywhere
}

  egress {
    from_port         = 0
    to_port           = 0
    protocol          = "-1"
    cidr_blocks       = var.anywhere
}
}
resource "aws_security_group" "frontend_sg" {
  name = var.frontend_sg_name
  description = var.frontend_sg_description
  vpc_id = var.vpc_id

  ingress {
    from_port         = 80
    to_port           = 80
    protocol          = "tcp"
    security_groups   = [aws_security_group.alb_sg.id] 
}
  ingress {
    from_port         = 22
    to_port           = 22
    protocol          = "tcp"
    security_groups   = [aws_security_group.bastion_sg.id]
}

  egress {
    from_port         = 0
    to_port           = 0
    protocol          = "-1"
    cidr_blocks       = var.anywhere
}
}
resource "aws_security_group" "rds_sg" {
  name = var.rds_sg_name
  description = var.rds_sg_description
  vpc_id = var.vpc_id

  ingress {
    from_port         = 3306
    to_port           = 3306
    protocol          = "tcp"
    security_groups   = [aws_security_group.backend_sg.id]
}
}
